# python-project-lesson-10-1

./: .env.example  .gitignore  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: csv_excel_manager.py  decorators.py  external_api.py  generators.py  main.py  main.sublime-workspace  masks.py  processing.py  search.py  untils.py  utils.py  widget.py
tests/: test_csv_excel_manager.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_search.py  test_untils.py  test_utils.py  test_widget.py
